# reducer

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
benches/: async.rs  parallel.rs
example/: Cargo.toml  README.md  conrod.rs  iui.rs
examples/: Cargo.toml  README.md  conrod.rs  egui.rs  gtk.rs  iui.rs  libui.rs
src/: dispatcher.rs  lib.rs  macros.rs  mock.rs  reactor.rs  reducer.rs  store.rs
src/dispatcher/: async.rs  async_store.rs  mod.rs  sink.rs  spawn.rs  store.rs
src/reactor/: array.rs  boxed.rs  mock.rs  mod.rs  mpsc.rs  option.rs  reference.rs  sender.rs  sink.rs  slice.rs  tuple.rs
src/reducer/: arc.rs  array.rs  boxed.rs  mock.rs  mod.rs  rc.rs  reference.rs  slice.rs  tuple.rs
src/subscriber/: any.rs  array.rs  mock.rs  mod.rs  option.rs  reference.rs  sender.rs  slice.rs  tuple.rs
