[package]
name = "reducer"
version = "3.0.1"
edition = "2018"
authors = ["Bruno Dutra <brunocodutra@gmail.com>"]
description= "A predictable reactive framework for Rust apps"
repository = "https://github.com/brunocodutra/reducer.git"
license = "MIT"
readme = "README.md"
keywords = ["redux", "flux", "reactive", "state"]
categories = ["asynchronous", "gui"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["async"]
alloc = []
std = ["alloc"]
async = ["std", "futures", "pin-project"]

[badges]
codecov = { repository = "brunocodutra/reducer" }

[dependencies]
derive_more = "0.99.17"
futures = { version = "0.3.21", optional = true }
pin-project = { version = "1.0.10", optional = true }

[dev-dependencies]
conrod_core = "0.76.1"
conrod_glium = "0.76.1"
conrod_winit = "0.76.1"
glium = "0.28.0"
mockall = "0.11.0"
proptest = "1.0.0"
ring-channel = "0.11.0"
test-strategy = "0.2.0"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
ttf-noto-sans = "0.1.1"
winit = "0.23.0"

[[example]]
name = "conrod"
harness = false
required-features = ["async"]
