[package]
name = "example"
version = "0.0.0"
publish = false
workspace = ".."
edition = "2018"

[[bin]]
name = "conrod"
path = "conrod.rs"

[[bin]]
name = "iui"
path = "iui.rs"

[dependencies]
reducer = { path = ".." }
conrod_core = "0.72.0"
conrod_glium = "0.72.0"
conrod_winit = "0.73.0"
glium = "0.28"
iui = "0.3.0"
ring-channel = "0.8.2"
smol = "1.2.5"
ttf-noto-sans = "0.1.1"
winit = "0.23"
