[package]
name = "examples"
version = "0.0.0"
publish = false
workspace = ".."
edition = "2018"

[[bin]]
name = "conrod"
path = "conrod.rs"

[[bin]]
name = "iui"
path = "iui.rs"

[dependencies]
reducer = { path = ".." }
conrod_core = "0.65.0"
conrod_gfx = "0.65.0"
conrod_winit = "0.65.0"
futures-preview = "0.3.0-alpha.17"
gfx = "0.17.0"
gfx_window_glutin = "0.28.0"
glutin = "0.19.0"
iui = "0.3.0"
ttf-noto-sans = "0.1.1"
winit = "0.18.1"
