[package]
name = "examples"
version = "0.0.0"
publish = false
workspace = ".."
edition = "2018"

[[bin]]
name = "conrod"
path = "conrod.rs"

[[bin]]
name = "iui"
path = "iui.rs"

[dependencies]
reducer = { path = ".." }
conrod_core = "0.69.0"
conrod_gfx = "0.69.0"
conrod_winit = "0.69.0"
futures = { version = "0.3.4", features = ["thread-pool"] }
gfx = "0.18.2"
gfx_window_glutin = "0.31.0"
glutin = "0.21.2"
iui = "0.3.0"
ring-channel = "0.8.2"
ttf-noto-sans = "0.1.1"
winit = "0.19.5"
